--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                             <h4 style="color:red;">marked with Eternity, Infinity &amp; Ultimate Bliss. </h4>
                         </div>
                     
-                    <div class="site-logo" align:right;>
+                    <div class="site-logo1" align:right;>
                                <a href="https://ultimatebliss.org/index.php" title="Swami Aaron" rel="home">
-                                <img src="images/swami aaron.jpg" alt="Swami Aaron" title="Swami Aaron" height="100" width="150">
+                                <img src="images/swami aaron.jpg" alt="Swami Aaron" title="Swami Aaron" height="120" width="150">
                             </a>
                              <h5 style="margin-top: 16px;" >Swami Aaron
                                     <br><span style="font-size: 17px;">(Dr. Aaron Thomas)</span>
