--- a/index.html
+++ b/index.html
@@ -213,21 +213,21 @@
 	<h1>Our Blog</h1>
 	<div class="blog-row">
 		<div class="blog-box">
-			<img src="C:\Users\ASHU\Documents\My Bluetooth\Proj-Bliss-Foundation\automatic-image-slider-in-html-css\images\1.png">
+			<img src="images/1.png">
 
 		<h3>Interior Design <br>is the Art, the interior designer</h3>
 		<p>November 15, 2020 / Furniture</p>
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
-			<img src="C:\Users\ASHU\Documents\My Bluetooth\Proj-Bliss-Foundation\automatic-image-slider-in-html-css\images\Conscious Citizen Forum & Social Issues.jpg">
+			<img src="images/Conscious Citizen Forum & Social Issues.jpg">
 			
 		<h3>Interior Design <br>is the Art, the interior designer</h3>
 		<p>November 15, 2020 / Furniture</p>
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
-			<img src="C:\Users\ASHU\Documents\My Bluetooth\Proj-Bliss-Foundation\automatic-image-slider-in-html-css\images\Spiritual Friendship 2.jpg">
+			<img src="images/Spiritual Friendship 2.jpg">
 			
 		<h3>Interior Design <br>is the Art, the interior designer</h3>
 		<p>November 15, 2020 / Furniture</p>
