--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
-			<div class="img"><img src="images/Conscious Citizen Forum & Social Issues.jp" alt="img" draggable="false"></div>	
+			<div class="img"><img src="images/ConsciousCitizen.jpg" alt="img" draggable="false"></div>	
 			<!-- <img src="images/Conscious Citizen Forum & Social Issues.jpg"> -->
 			
 		<h3>Interior Design <br>is the Art, the interior designer</h3>
