--- a/index.html
+++ b/index.html
@@ -201,15 +201,17 @@
 			<div class="img"><img src="images/1.png" alt="img" draggable="false"></div>
 			<!-- <img src="images/1.png"> -->
 
-		<h3>Keep Calm <br>,and Relaxr</h3>
+
+		<h3>Explore Life <br>Beyond Death</h3>
 		<p>july 15, 2020</p>
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
 			<div class="img"><img src="images/ConsciousCitizen.jpg" alt="img" draggable="false"></div>	
 			<!-- <img src="images/Conscious Citizen Forum & Social Issues.jpg"> -->
-			
-		<h3>Fight Today  <br>For Better Tomorrow</h3>
+		
+	
+		<h3>A Life,  <br>free From All Misery And Sufferings</h3>
 		<p>June 15, 2021</p>
 		<button class="c-btn">Read more</button>
 		</div>
@@ -217,7 +219,7 @@
 			<div class="img"><img src="images/Spiritual Friendship 2.jpg" alt="img" draggable="false"></div>
 				<!-- <img src="images/Spiritual Friendship 2.jpg"> -->
 			
-		<h3>Spiritual <br>Friendsh</h3>
+		<h3>A Life,<br>Marked With Eternity, Infinity & Ultimate Bliss.</h3>
 		<p>March 15, 2021</p>
 		<button class="c-btn">Read more</button>
 		</div>
