--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 
 		<h3>Explore Life <br>Beyond Death</h3>
-		<p>july 15, 2020</p>
+		<!--<p>july 15, 2020</p> -->
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
@@ -212,7 +212,7 @@
 		
 	
 		<h3>A Life,  <br>free From All Misery And Sufferings</h3>
-		<p>June 15, 2021</p>
+		<!-- <p>June 15, 2021</p> -->
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
@@ -220,7 +220,7 @@
 				<!-- <img src="images/Spiritual Friendship 2.jpg"> -->
 			
 		<h3>A Life,<br>Marked With Eternity, Infinity & Ultimate Bliss.</h3>
-		<p>March 15, 2021</p>
+		<!-- <p>March 15, 2021</p> -->
 		<button class="c-btn">Read more</button>
 		</div>
 	</div>
