--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		
 	
 		<h3>A Life,  <br>free From All Misery And Sufferings</h3>
-		<!-- <p>June 15, 2021</p> -->
+		 <p>June 15, 2021</p>
 		<button class="c-btn">Read more</button>
 		</div>
 			<div class="blog-box">
